@@ -1,3 +1,5 @@
+* Compute shipment cost without creating a line
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 
